--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.jackson.time-zone=Asia/Jakarta
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Jakarta
 
 # JWT Config
-shop.jwt.secret_key=${JWT_SECRET:YWt1dGFrdGF1YXBheWFuZ3RlcmphZGk=}
-shop.jwt.issuer=grup3
-shop.jwt.expirationInSecond=${JWT_EXPIRATION:28800000}
+netflix.jwt.secret_key=${JWT_SECRET:YWt1dGFrdGF1YXBheWFuZ3RlcmphZGk=}
+netflix.jwt.issuer=grup3
+netflix.jwt.expirationInSecond=${JWT_EXPIRATION:28800000}
