--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=netflix
 
 # Database Configuration
 spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:Sauqisan1!}
+spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:netflix_db}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
